# VSATEditor

./: .clang-format  CMakeLists.txt  README.md  main.cpp
cmake/: ExternalLib-Config.cmake.in
include/azh/: attribute_table.h  logger.h  props.h  utils.h  version.hpp
include/azh/utils/: file.hpp  logger.hpp
src/: logger.cpp  props.cpp
ui/: CMakeLists.txt  attribute_table_widget.cpp  attribute_table_widget.h  attribute_table_widget.ui  auto_updater.cpp  auto_updater.h  cmake_tool_dialog.cpp  file_selector_dialog.cpp  file_selector_dialog.h  file_selector_dialog.ui  library_auto_scan_widget.cpp  library_auto_scan_widget.h  library_auto_scan_widget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc  utils.hpp
ui/include/: attribute_table_widget.h  auto_updater.h  constants.hpp
ui/include/tools/: cmake_tool_dialog.h  file_selector_dialog.h
ui/res/: style.qss
ui/res/attr/: default_attributes.csv  more_attributes.csv
ui/res/text/: about.txt  cmake_qt_template.txt  cmake_template.txt  help.txt  link.txt
ui/src/: attribute_table_widget.cpp  auto_updater.cpp  mainwindow.cpp
ui/src/tools/: cmake_tool_dialog.cpp  file_selector_dialog.cpp  library_auto_scan_widget.cpp
ui/ui/: cmake_tool_dialog.ui  file_selector_dialog.ui  mainwindow.ui
